begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.request.key
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|key
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collections
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Map
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Optional
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|util
operator|.
name|Time
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|scm
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|ExcludeList
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|audit
operator|.
name|AuditLogger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|audit
operator|.
name|OMAction
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMMetadataManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMMetrics
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OzoneManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|exceptions
operator|.
name|OMException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyLocationInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|OMClientResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|key
operator|.
name|OMAllocateBlockResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|AllocateBlockRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|AllocateBlockResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|KeyArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|acl
operator|.
name|IAccessAuthorizer
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|acl
operator|.
name|OzoneObj
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|db
operator|.
name|cache
operator|.
name|CacheKey
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|db
operator|.
name|cache
operator|.
name|CacheValue
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|exceptions
operator|.
name|OMException
operator|.
name|ResultCodes
operator|.
name|KEY_NOT_FOUND
import|;
end_import

begin_comment
comment|/**  * Handles allocate block request.  */
end_comment

begin_class
DECL|class|OMAllocateBlockRequest
specifier|public
class|class
name|OMAllocateBlockRequest
extends|extends
name|OMKeyRequest
block|{
DECL|field|LOG
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|OMAllocateBlockRequest
operator|.
name|class
argument_list|)
decl_stmt|;
DECL|method|OMAllocateBlockRequest (OMRequest omRequest)
specifier|public
name|OMAllocateBlockRequest
parameter_list|(
name|OMRequest
name|omRequest
parameter_list|)
block|{
name|super
argument_list|(
name|omRequest
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|preExecute (OzoneManager ozoneManager)
specifier|public
name|OMRequest
name|preExecute
parameter_list|(
name|OzoneManager
name|ozoneManager
parameter_list|)
throws|throws
name|IOException
block|{
name|AllocateBlockRequest
name|allocateBlockRequest
init|=
name|getOmRequest
argument_list|()
operator|.
name|getAllocateBlockRequest
argument_list|()
decl_stmt|;
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|allocateBlockRequest
argument_list|)
expr_stmt|;
name|KeyArgs
name|keyArgs
init|=
name|allocateBlockRequest
operator|.
name|getKeyArgs
argument_list|()
decl_stmt|;
name|ExcludeList
name|excludeList
init|=
operator|new
name|ExcludeList
argument_list|()
decl_stmt|;
if|if
condition|(
name|allocateBlockRequest
operator|.
name|hasExcludeList
argument_list|()
condition|)
block|{
name|excludeList
operator|=
name|ExcludeList
operator|.
name|getFromProtoBuf
argument_list|(
name|allocateBlockRequest
operator|.
name|getExcludeList
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|// TODO: Here we are allocating block with out any check for key exist in
comment|//  open table or not and also with out any authorization checks.
comment|//  Assumption here is that allocateBlocks with out openKey will be less.
comment|//  There is a chance some one can misuse this api to flood allocateBlock
comment|//  calls. But currently allocateBlock is internally called from
comment|//  BlockOutputStreamEntryPool, so we are fine for now. But if one some
comment|//  one uses direct omclient we might be in trouble.
comment|// To allocate atleast one block passing requested size and scmBlockSize
comment|// as same value. When allocating block requested size is same as
comment|// scmBlockSize.
name|List
argument_list|<
name|OmKeyLocationInfo
argument_list|>
name|omKeyLocationInfoList
init|=
name|allocateBlock
argument_list|(
name|ozoneManager
operator|.
name|getScmClient
argument_list|()
argument_list|,
name|ozoneManager
operator|.
name|getBlockTokenSecretManager
argument_list|()
argument_list|,
name|keyArgs
operator|.
name|getType
argument_list|()
argument_list|,
name|keyArgs
operator|.
name|getFactor
argument_list|()
argument_list|,
name|excludeList
argument_list|,
name|ozoneManager
operator|.
name|getScmBlockSize
argument_list|()
argument_list|,
name|ozoneManager
operator|.
name|getScmBlockSize
argument_list|()
argument_list|,
name|ozoneManager
operator|.
name|getPreallocateBlocksMax
argument_list|()
argument_list|,
name|ozoneManager
operator|.
name|isGrpcBlockTokenEnabled
argument_list|()
argument_list|,
name|ozoneManager
operator|.
name|getOMNodeId
argument_list|()
argument_list|)
decl_stmt|;
comment|// Set modification time
name|KeyArgs
operator|.
name|Builder
name|newKeyArgs
init|=
name|keyArgs
operator|.
name|toBuilder
argument_list|()
operator|.
name|setModificationTime
argument_list|(
name|Time
operator|.
name|now
argument_list|()
argument_list|)
decl_stmt|;
name|AllocateBlockRequest
operator|.
name|Builder
name|newAllocatedBlockRequest
init|=
name|AllocateBlockRequest
operator|.
name|newBuilder
argument_list|()
operator|.
name|setClientID
argument_list|(
name|allocateBlockRequest
operator|.
name|getClientID
argument_list|()
argument_list|)
operator|.
name|setKeyArgs
argument_list|(
name|newKeyArgs
argument_list|)
decl_stmt|;
if|if
condition|(
name|allocateBlockRequest
operator|.
name|hasExcludeList
argument_list|()
condition|)
block|{
name|newAllocatedBlockRequest
operator|.
name|setExcludeList
argument_list|(
name|allocateBlockRequest
operator|.
name|getExcludeList
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|// Add allocated block info.
name|newAllocatedBlockRequest
operator|.
name|setKeyLocation
argument_list|(
name|omKeyLocationInfoList
operator|.
name|get
argument_list|(
literal|0
argument_list|)
operator|.
name|getProtobuf
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|getOmRequest
argument_list|()
operator|.
name|toBuilder
argument_list|()
operator|.
name|setUserInfo
argument_list|(
name|getUserInfo
argument_list|()
argument_list|)
operator|.
name|setAllocateBlockRequest
argument_list|(
name|newAllocatedBlockRequest
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
annotation|@
name|Override
DECL|method|validateAndUpdateCache (OzoneManager ozoneManager, long transactionLogIndex)
specifier|public
name|OMClientResponse
name|validateAndUpdateCache
parameter_list|(
name|OzoneManager
name|ozoneManager
parameter_list|,
name|long
name|transactionLogIndex
parameter_list|)
block|{
name|OzoneManagerProtocolProtos
operator|.
name|AllocateBlockRequest
name|allocateBlockRequest
init|=
name|getOmRequest
argument_list|()
operator|.
name|getAllocateBlockRequest
argument_list|()
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|KeyArgs
name|keyArgs
init|=
name|allocateBlockRequest
operator|.
name|getKeyArgs
argument_list|()
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|KeyLocation
name|blockLocation
init|=
name|allocateBlockRequest
operator|.
name|getKeyLocation
argument_list|()
decl_stmt|;
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|blockLocation
argument_list|)
expr_stmt|;
name|String
name|volumeName
init|=
name|keyArgs
operator|.
name|getVolumeName
argument_list|()
decl_stmt|;
name|String
name|bucketName
init|=
name|keyArgs
operator|.
name|getBucketName
argument_list|()
decl_stmt|;
name|String
name|keyName
init|=
name|keyArgs
operator|.
name|getKeyName
argument_list|()
decl_stmt|;
name|long
name|clientID
init|=
name|allocateBlockRequest
operator|.
name|getClientID
argument_list|()
decl_stmt|;
name|OMMetrics
name|omMetrics
init|=
name|ozoneManager
operator|.
name|getMetrics
argument_list|()
decl_stmt|;
name|omMetrics
operator|.
name|incNumAddAllocateBlockCalls
argument_list|()
expr_stmt|;
name|AuditLogger
name|auditLogger
init|=
name|ozoneManager
operator|.
name|getAuditLogger
argument_list|()
decl_stmt|;
name|Map
argument_list|<
name|String
argument_list|,
name|String
argument_list|>
name|auditMap
init|=
name|buildKeyArgsAuditMap
argument_list|(
name|keyArgs
argument_list|)
decl_stmt|;
name|auditMap
operator|.
name|put
argument_list|(
name|OzoneConsts
operator|.
name|CLIENT_ID
argument_list|,
name|String
operator|.
name|valueOf
argument_list|(
name|clientID
argument_list|)
argument_list|)
expr_stmt|;
name|OMResponse
operator|.
name|Builder
name|omResponse
init|=
name|OMResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCmdType
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Type
operator|.
name|AllocateBlock
argument_list|)
operator|.
name|setStatus
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|OK
argument_list|)
operator|.
name|setSuccess
argument_list|(
literal|true
argument_list|)
decl_stmt|;
try|try
block|{
comment|// check Acl
if|if
condition|(
name|ozoneManager
operator|.
name|getAclsEnabled
argument_list|()
condition|)
block|{
name|checkAcls
argument_list|(
name|ozoneManager
argument_list|,
name|OzoneObj
operator|.
name|ResourceType
operator|.
name|KEY
argument_list|,
name|OzoneObj
operator|.
name|StoreType
operator|.
name|OZONE
argument_list|,
name|IAccessAuthorizer
operator|.
name|ACLType
operator|.
name|WRITE
argument_list|,
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|)
expr_stmt|;
block|}
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"AllocateBlock failed for Key: {} in volume/bucket:{}/{}"
argument_list|,
name|keyName
argument_list|,
name|bucketName
argument_list|,
name|volumeName
argument_list|,
name|ex
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|incNumBlockAllocateCallFails
argument_list|()
expr_stmt|;
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|ALLOCATE_BLOCK
argument_list|,
name|auditMap
argument_list|,
name|ex
argument_list|,
name|getOmRequest
argument_list|()
operator|.
name|getUserInfo
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMAllocateBlockResponse
argument_list|(
literal|null
argument_list|,
operator|-
literal|1L
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|ex
argument_list|)
argument_list|)
return|;
block|}
name|OMMetadataManager
name|omMetadataManager
init|=
name|ozoneManager
operator|.
name|getMetadataManager
argument_list|()
decl_stmt|;
try|try
block|{
name|validateBucketAndVolume
argument_list|(
name|omMetadataManager
argument_list|,
name|volumeName
argument_list|,
name|bucketName
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"AllocateBlock failed for Key: {} in volume/bucket:{}/{}"
argument_list|,
name|keyName
argument_list|,
name|bucketName
argument_list|,
name|volumeName
argument_list|,
name|ex
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|incNumBlockAllocateCallFails
argument_list|()
expr_stmt|;
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|ALLOCATE_BLOCK
argument_list|,
name|auditMap
argument_list|,
name|ex
argument_list|,
name|getOmRequest
argument_list|()
operator|.
name|getUserInfo
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMAllocateBlockResponse
argument_list|(
literal|null
argument_list|,
operator|-
literal|1L
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|ex
argument_list|)
argument_list|)
return|;
block|}
name|String
name|openKey
init|=
name|omMetadataManager
operator|.
name|getOpenKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|)
decl_stmt|;
name|IOException
name|exception
init|=
literal|null
decl_stmt|;
name|OmKeyInfo
name|omKeyInfo
init|=
literal|null
decl_stmt|;
comment|// Here we don't acquire bucket/volume lock because for a single client
comment|// allocateBlock is called in serial fashion.
try|try
block|{
name|omKeyInfo
operator|=
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|get
argument_list|(
name|openKey
argument_list|)
expr_stmt|;
if|if
condition|(
name|omKeyInfo
operator|==
literal|null
condition|)
block|{
throw|throw
operator|new
name|OMException
argument_list|(
literal|"Open Key not found "
operator|+
name|openKey
argument_list|,
name|KEY_NOT_FOUND
argument_list|)
throw|;
block|}
comment|// Append new block
name|omKeyInfo
operator|.
name|appendNewBlocks
argument_list|(
name|Collections
operator|.
name|singletonList
argument_list|(
name|OmKeyLocationInfo
operator|.
name|getFromProtobuf
argument_list|(
name|blockLocation
argument_list|)
argument_list|)
argument_list|,
literal|false
argument_list|)
expr_stmt|;
comment|// Set modification time.
name|omKeyInfo
operator|.
name|setModificationTime
argument_list|(
name|keyArgs
operator|.
name|getModificationTime
argument_list|()
argument_list|)
expr_stmt|;
comment|// Add to cache.
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|addCacheEntry
argument_list|(
operator|new
name|CacheKey
argument_list|<>
argument_list|(
name|openKey
argument_list|)
argument_list|,
operator|new
name|CacheValue
argument_list|<>
argument_list|(
name|Optional
operator|.
name|of
argument_list|(
name|omKeyInfo
argument_list|)
argument_list|,
name|transactionLogIndex
argument_list|)
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|exception
operator|=
name|ex
expr_stmt|;
block|}
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|ALLOCATE_BLOCK
argument_list|,
name|auditMap
argument_list|,
name|exception
argument_list|,
name|getOmRequest
argument_list|()
operator|.
name|getUserInfo
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
if|if
condition|(
name|exception
operator|==
literal|null
condition|)
block|{
name|omResponse
operator|.
name|setAllocateBlockResponse
argument_list|(
name|AllocateBlockResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setKeyLocation
argument_list|(
name|blockLocation
argument_list|)
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMAllocateBlockResponse
argument_list|(
name|omKeyInfo
argument_list|,
name|clientID
argument_list|,
name|omResponse
operator|.
name|build
argument_list|()
argument_list|)
return|;
block|}
else|else
block|{
name|omMetrics
operator|.
name|incNumBlockAllocateCallFails
argument_list|()
expr_stmt|;
return|return
operator|new
name|OMAllocateBlockResponse
argument_list|(
literal|null
argument_list|,
operator|-
literal|1L
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|exception
argument_list|)
argument_list|)
return|;
block|}
block|}
block|}
end_class

end_unit

